# kdedimmer

./: .SRCINFO  CMakeLists.txt  PKGBUILD  README.md  install.sh  kdedimmer.service  main.cpp
